--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "ansi-escapes": "^4.3.2",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^3.2.1",
+    "axios": "^1.5.1",
     "base64-js": "^1.5.1",
     "bl": "^4.1.0",
     "boolbase": "^1.0.0",
     "buffer": "^5.7.1",
     "chalk": "^2.4.2",
     "chardet": "^0.7.0",
+    "cheerio": "^1.0.0-rc.12",
     "cheerio-select": "^1.6.0",
     "cli-cursor": "^3.1.0",
     "cli-spinners": "^2.6.1",
